RESOLVED FIXED141057
[iOS] ASSERTION FAILED: m_scriptExecutionContext->isContextThread() in ContextDestructionObserver::observeContext
https://bugs.webkit.org/show_bug.cgi?id=141057
Summary [iOS] ASSERTION FAILED: m_scriptExecutionContext->isContextThread() in Contex...
Daniel Bates
Reported 2015-01-29 15:58:31 PST
When I ran test crypto/subtle/rsa-oaep-generate-non-extractable-key.html in DumpRenderTree (DRT) with a debug iOS WebKit build it caused DRT to crash because the ASSERT(m_scriptExecutionContext->isContextThread()) failed in ContextDestructionObserver::observeContext().
Attachments
rsa-oaep-generate-non-extractable-key-crash-log.txt (4.18 KB, text/plain)
2015-01-29 15:59 PST, Daniel Bates
no flags
Patch (11.06 KB, patch)
2015-01-29 16:25 PST, Daniel Bates
no flags
Daniel Bates
Comment 1 2015-01-29 15:59:09 PST
Daniel Bates
Comment 2 2015-01-29 15:59:58 PST
Created attachment 245667 [details] rsa-oaep-generate-non-extractable-key-crash-log.txt
Daniel Bates
Comment 3 2015-01-29 16:25:01 PST
Alexey Proskuryakov
Comment 4 2015-01-29 17:24:54 PST
Comment on attachment 245669 [details] Patch Thank you!
Daniel Bates
Comment 5 2015-02-02 11:47:03 PST
Comment on attachment 245669 [details] Patch Clearing flags on attachment: 245669 Committed r179481: <http://trac.webkit.org/changeset/179481>
Daniel Bates
Comment 6 2015-02-02 11:47:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.